--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DECODE CO-A EXAM PORTAL</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <!-- <meta name="description" content="Lovable Generated Project" />
+    <meta name="author" content="Lovable" /> -->
 
     <meta property="og:title" content="DECODE CO-A EXAM PORTAL" />
     <!-- <meta property="og:description" content="Lovable Generated Project" /> -->
